# nb_config

./: .gitignore  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  config_user2.py  publish.py  pyproject.toml  setup.py  {self.user_config_module_path}.py
examples/: config_manager_example.py  print_dataclass_example.py
myconfigs/pyconfigs/: config_user2.py  config_user5.py  config_user6.py
nb_config/: __init__.py  auto_import_user_config.py  config_manager.py  import_user_config.py  nb_config_decorator.py  simple_data_class.py  utils.py
tests/mock_sitepackage/: config_default.py  config_defualt.py  site_packge_fun1_mod.py  site_packge_fun2_mod.py
tests/mock_user_project/: config_user.py  test_start_run.py  test_start_run_auto_import_config.py
